<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">いくつだワン？</string>
    <string name="action_add">追加</string>
    <string name="action_edit">編集</string>
    <string name="action_delete">削除</string>
    <string name="action_setting">設定</string>
    <string name="action_about">アプリについて</string>
    <string name="action_back">戻る</string>

    <string name="confirm">確認</string>
    <string name="cancel">キャンセル</string>
    <string name="ok">OK</string>
    <string name="error">エラー</string>
    <string name="save">保存</string>
    <string name="rotate">回転</string>
    <string name="dog_age">犬年齢</string>
    <string name="human_age">人間年齢</string>
    <string name="born_from">生まれて</string>
    <string name="start_camera">カメラを起動する</string>
    <string name="start_library">ギャラリーから選ぶ</string>
    <string name="delete_photo">写真を削除する</string>
    <string name="dog_photo">ワンちゃんの写真</string>
    <string name="dog_name">ワンちゃんのお名前</string>
    <string name="dog_birthday">ワンちゃんのお誕生日</string>
    <string name="dog_kind">ワンちゃんの種類</string>
    <string name="dog_die_date">ワンちゃんが亡くなった日</string>
    <string name="open_other">▼その他の項目を開く</string>
    <string name="close_other">▲その他の項目を閉じる</string>
    <string name="notification_birth">お誕生日を通知する</string>
    <string name="notification_archive">命日を通知する</string>
    <string name="notice_mark">※</string>
    <string name="close_mark">×</string>
    <string name="url">http://www.e-2.co.jp/</string>
    <string name="produced_by">Produced By E2</string>
    <string name="cc_pixel_kit">Edit and delete icons on ActionBar by PixelKit</string>
    <string name="before_del">本当に削除してよろしいですか？</string>
    <string name="about_app">”いくつだワン？”は、ワンちゃんの年齢・人間に換算した年齢・生まれてからの日数がわかるシンプルなアプリです。\n\n人間に換算した年齢は、以下のように計算しています。\n一般的に、小型犬のほうが成長が早く、老化が遅いと言われています。</string>
    <string name="about_app_notice">人間に換算した年齢は、犬種によって差があります。あくまでも目安とお考えください。</string>
    <string name="dog_small">小型犬</string>
    <string name="dog_normal">中型犬</string>
    <string name="dog_large">大型犬</string>
    <string name="until_one_year">1年目まで</string>
    <string name="until_two_year">2年目まで</string>
    <string name="over_two_year">2年目以降</string>
    <string name="small_until_one_year_dog_age">16歳/年</string>
    <string name="small_until_two_year_dog_age">8歳/年</string>
    <string name="small_over_two_year_dog_age">4歳/年</string>
    <string name="normal_until_one_year_dog_age">16歳/年</string>
    <string name="normal_until_two_year_dog_age">6歳/年</string>
    <string name="normal_over_two_year_dog_age">5歳/年</string>
    <string name="large_until_one_year_dog_age">12歳/年</string>
    <string name="large_until_two_year_dog_age">6歳/年</string>
    <string name="large_over_two_year_dog_age">7歳/年</string>
    <string name="lets_trimming_photo">ワンちゃんの顔が中心になるようにトリミングしてください。</string>
    <string name="no_trimming_app">トリミング可能なアプリがインストールされていません。\nもしくは、先程選択した写真が読み込めません、別の写真を選択してください。</string>
    <string name="failed_to_use_camera">カメラを利用できません、ギャラリーから選択してください。</string>
    <string name="trimming_fail">トリミングに失敗しました。</string>
    <string name="save_photo_fail">写真の保存に失敗しました。</string>
    <string name="save_success">保存しました。</string>
    <string name="save_fail">保存に失敗しました。\nもう一度やり直してください。</string>
    <string name="validate_error_archive_date">亡くなった日はお誕生日より過去は指定できません。</string>
    <string name="no_camera_app">カメラアプリがインストールされていません。</string>
    <string name="no_gallery_app">ギャラリーアプリがインストールされていません。</string>
    <string name="delete_success">削除しました。</string>
    <string name="delete_fail">削除に失敗しました。もう一度やり直してください。</string>
    <string name="date_format" formatted="false">%s年%s月%s日</string>
    <string name="born">生まれ</string>
    <string name="age_format" formatted="false">%d歳%dヶ月</string>
    <string name="age_about">歳くらい</string>
    <string name="death">永眠</string>
    <string name="day">日</string>
    <string name="day_count">日目</string>
    <string name="other">その他</string>
    <string name="change_settings">設定を変更しました</string>
    <string name="about_calc_age">年齢計算方法について</string>
    <string name="app_version">アプリバージョン</string>
    <string name="notify_birthday" formatted="false">%s %s お誕生日</string>
    <string name="notify_birthday_sub" formatted="false">%s歳になりました、おめでとうございます！</string>
    <string name="notify_archive" formatted="false">%s %s 命日</string>
    <string name="notify_archive_sub" formatted="false">亡くなって%s年経ちました</string>
    <string name="permission_denied">許可されない場合は、カメラは使用できません。ギャラリーから選択してください。</string>
    <string name="permission_request_title">お願い</string>
    <string name="permission_request_text">カメラを利用するには、外部ストレージへの読み込み権限と書き込み権限が必要です。次に表示されるダイアログで許可を押してください。</string>

    <string-array name="initial_label_list">
        <item>あ行</item>
        <item>か行</item>
        <item>さ行</item>
        <item>た行</item>
        <item>な行</item>
        <item>は行</item>
        <item>ま行</item>
        <item>や行</item>
        <item>ら行</item>
        <item>わ行</item>
    </string-array>

</resources>