<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:title="@string/action_add"/>
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit"
        android:orderInCategory="2"
        app:showAsAction="always"
        android:title="@string/action_edit"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="3"
        app:showAsAction="always"
        android:title="@string/action_delete"/>
    <item
        android:id="@+id/action_setting"
        android:icon="@drawable/ic_about"
        android:orderInCategory="4"
        app:showAsAction="always"
        android:title="@string/action_setting"/>
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_about"
        android:orderInCategory="5"
        app:showAsAction="always"
        android:title="@string/action_about"/>

</menu>