<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<LinearLayout
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/margin_default_container" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default_between_view"
        android:text="@string/about_app"
        android:textColor="@color/text"
        android:textSize="@dimen/font_size_about"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_table_cell" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_table_cell_label"
                android:padding="@dimen/margin_between_small_view"
                android:text=""
                android:textColor="@color/text"
                android:textSize="@dimen/font_size_about" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_table_cell_label"
                android:padding="@dimen/margin_between_small_view"
                android:text="@string/dog_small"
                android:textColor="@color/text_highlight"
                android:textSize="@dimen/font_size_about" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_table_cell_label"
                android:padding="@dimen/margin_between_small_view"
                android:text="@string/dog_normal"
                android:textColor="@color/text_highlight"
                android:textSize="@dimen/font_size_about" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_table_cell_label"
                android:padding="@dimen/margin_between_small_view"
                android:text="@string/dog_large"
                android:textColor="@color/text_highlight"
                android:textSize="@dimen/font_size_about" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_table_cell_label"
                android:padding="@dimen/margin_between_small_view"
                android:text="@string/until_one_year"
                android:textColor="@color/text_highlight"
                android:textSize="@dimen/font_size_about"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_table_cell"
                android:padding="@dimen/margin_between_small_view"
                android:text="@string/small_until_one_year_dog_age"
                android:textColor="@color/text"
                android:textSize="@dimen/font_size_about"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_table_cell"
                android:padding="@dimen/margin_between_small_view"
                android:text="@string/normal_until_one_year_dog_age"
                android:textColor="@color/text"
                android:textSize="@dimen/font_size_about"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_table_cell"
                android:padding="@dimen/margin_between_small_view"
                android:text="@string/large_until_one_year_dog_age"
                android:textColor="@color/text"
                android:textSize="@dimen/font_size_about"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_table_cell_label"
                android:padding="@dimen/margin_between_small_view"
                android:text="@string/until_two_year"
                android:textColor="@color/text_highlight"
                android:textSize="@dimen/font_size_about" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_table_cell"
                android:padding="@dimen/margin_between_small_view"
                android:text="@string/small_until_two_year_dog_age"
                android:textColor="@color/text"
                android:textSize="@dimen/font_size_about"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_table_cell"
                android:padding="@dimen/margin_between_small_view"
                android:text="@string/normal_until_two_year_dog_age"
                android:textColor="@color/text"
                android:textSize="@dimen/font_size_about"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_table_cell"
                android:padding="@dimen/margin_between_small_view"
                android:text="@string/large_until_two_year_dog_age"
                android:textColor="@color/text"
                android:textSize="@dimen/font_size_about"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_table_cell_label"
                android:padding="@dimen/margin_between_small_view"
                android:text="@string/over_two_year"
                android:textColor="@color/text_highlight"
                android:textSize="@dimen/font_size_about" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_table_cell"
                android:padding="@dimen/margin_between_small_view"
                android:text="@string/small_over_two_year_dog_age"
                android:textColor="@color/text"
                android:textSize="@dimen/font_size_about"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_table_cell"
                android:padding="@dimen/margin_between_small_view"
                android:text="@string/normal_over_two_year_dog_age"
                android:textColor="@color/text"
                android:textSize="@dimen/font_size_about"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_table_cell"
                android:padding="@dimen/margin_between_small_view"
                android:text="@string/large_over_two_year_dog_age"
                android:textColor="@color/text"
                android:textSize="@dimen/font_size_about"/>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default_between_view"
            android:text="@string/notice_mark"
            android:textColor="@color/text"
            android:textSize="@dimen/font_size_about" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default_between_view"
            android:text="@string/about_app_notice"
            android:textColor="@color/text"
            android:textSize="@dimen/font_size_about"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_between_big_view"
        android:paddingTop="@dimen/margin_between_big_view"
        android:scaleType="fitXY"
        android:src="@android:drawable/divider_horizontal_textfield" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical" >

        <ImageView
            android:layout_width="@dimen/width_logo"
            android:layout_height="@dimen/width_logo"
            android:layout_marginRight="@dimen/margin_default_between_view"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/produced_by"
                android:textColor="@color/text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/url"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_between_big_view"
        android:paddingTop="@dimen/margin_between_big_view"
        android:scaleType="fitXY"
        android:src="@android:drawable/divider_horizontal_textfield" />

        <TextView
            android:id="@+id/textViewCC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_cc"
            android:drawablePadding="@dimen/margin_default_icon"
            android:layout_marginLeft="@dimen/margin_between_small_view"
            android:text="@string/cc_pixel_kit"
            android:textColor="@color/text"
            android:layout_gravity="center_horizontal"/>

</LinearLayout>

    </ScrollView>