<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_default_container"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical"
    android:paddingLeft="@dimen/margin_default_container"
    android:paddingRight="@dimen/margin_default_container" >

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dog_photo"
        android:textColor="@color/text"
        android:textSize="@dimen/font_size_default_title"
        android:textStyle="bold" 
        android:drawableLeft="@drawable/img_foot"
        android:drawablePadding="@dimen/margin_default_icon"
        android:gravity="center_vertical"/>

    <Button
        android:id="@+id/buttonCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default_between_view"
        android:background="@drawable/btn"
        android:text="@string/start_camera"
        android:textColor="@color/text_button"
        android:textSize="@dimen/font_size_default_button" />

    <Button
        android:id="@+id/buttonGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default_between_view"
        android:background="@drawable/btn"
        android:text="@string/start_library"
        android:textColor="@color/text_button"
        android:textSize="@dimen/font_size_default_button" />

    <Button
        android:id="@+id/buttonDelPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default_between_view"
        android:background="@drawable/btn2"
        android:text="@string/delete_photo"
        android:textColor="@color/text_button"
        android:textSize="@dimen/font_size_default_button" />

</LinearLayout>