<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_default_container"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical"
    android:paddingLeft="@dimen/margin_default_container"
    android:paddingRight="@dimen/margin_default_container" >

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default_between_view"
        android:text="@string/confirm"
        android:textColor="@color/text"
        android:textSize="@dimen/font_size_default_title"
        android:textStyle="bold" 
        android:drawableLeft="@drawable/img_foot"
        android:drawablePadding="@dimen/margin_default_icon"
        android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/textViewMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/before_del"
        android:textColor="@color/text"
        android:textSize="@dimen/font_size_default_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_between_big_view" >

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="@dimen/width_zero"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_default_horizontal_button"
            android:layout_weight="1"
            android:background="@drawable/btn2"
            android:text="@string/cancel"
            android:textColor="@color/text_button"
            android:textSize="@dimen/font_size_default_button" />

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="@dimen/width_zero"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_default_horizontal_button"
            android:layout_weight="1"
            android:background="@drawable/btn"
            android:text="@string/ok"
            android:textColor="@color/text_button"
            android:textSize="@dimen/font_size_default_button" />
    </LinearLayout>

</LinearLayout>