<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/twoBlock"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dog_name"
            android:layout_marginBottom="@dimen/halfBlock"
            style="@style/LabelTextViewStyle"
            />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/twoBlock"
            tools:ignore="LabelFor"
            android:inputType="none">

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dog_birthday"
            android:layout_marginBottom="@dimen/halfBlock"
            style="@style/LabelTextViewStyle"
            />

        <EditText
            android:id="@+id/buttonBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/twoBlock"
            android:focusable="false"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dog_kind"
            android:layout_marginBottom="@dimen/halfBlock"
            style="@style/LabelTextViewStyle"
            />

        <EditText
            android:id="@+id/buttonKind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/twoBlock"
            android:focusable="false"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dog_photo"
            android:layout_marginBottom="@dimen/halfBlock"
            style="@style/LabelTextViewStyle"
            />

        <com.makeramen.roundedimageview.RoundedImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/imageViewPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            android:src="@drawable/img_no_photo"
            android:layout_marginBottom="@dimen/twoBlock"
            android:contentDescription="@null"
            android:foreground="?android:attr/selectableItemBackground"
            app:riv_corner_radius="@dimen/threeBlock"
            />

        <LinearLayout
            android:id="@+id/linearLayoutArchive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dog_die_date"
                android:layout_marginBottom="@dimen/halfBlock"
                style="@style/LabelTextViewStyle"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                >

                <EditText
                    android:id="@+id/buttonArchive"
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="false"
                    />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:id="@+id/buttonClear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/zero"
                    android:minWidth="@dimen/zero"
                    android:padding="@dimen/zero"
                    android:layout_marginStart="@dimen/halfBlock"
                    app:icon="@drawable/ic_clear"
                    app:iconPadding="@dimen/zero"
                    app:iconTint="@color/brown"
                    app:rippleColor="@color/brown"
                    />

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/TranslateButtonStyle"
            android:id="@+id/buttonOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/open_other"
            />

        <com.google.android.material.button.MaterialButton
            style="@style/AppButtonStyle"
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twoBlock"
            android:layout_marginBottom="@dimen/twoBlock"
            android:text="@string/save" />

    </LinearLayout>

</ScrollView>