<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/twoBlock"
    android:background="@xml/bg_dialog"
    android:orientation="vertical"
    android:paddingLeft="@dimen/twoBlock"
    android:paddingRight="@dimen/twoBlock"
    >

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/twoBlock"
        android:text="@string/dog_birthday"
        android:gravity="center_vertical"
        android:textStyle="bold"
        style="@style/LabelTextViewStyle"
        />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:calendarViewShown="false"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twoBlock"
        >

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/halfBlock"
            android:layout_marginEnd="@dimen/halfBlock"
            android:layout_weight="1"
            android:text="@string/cancel"
            style="@style/LightBrownButtonStyle"
            />

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/halfBlock"
            android:layout_marginStart="@dimen/halfBlock"
            android:layout_weight="1"
            android:text="@string/ok"
            style="@style/AppButtonStyle"
            />

    </LinearLayout>

</LinearLayout>